plugins: import plugins from github
All plugins are imported from
https://github.com/gluster-rhsc/nagios-plugin.git

Change-Id: I9880becafccc79280873039e317b4afde747806c
Signed-off-by: Bala.FA <barumuga@redhat.com>
Reviewed-on: https://cuckoo.blr.redhat.com:8443/4

--- a/configure.ac
+++ b/configure.ac
@@ -82,6 +82,7 @@ fi
 AX_PYTHON_MODULE([argparse], [fatal])
 AX_PYTHON_MODULE([ethtool], [fatal])
 AX_PYTHON_MODULE([glusternagios], [fatal])
+AX_PYTHON_MODULE([mock], [fatal])
 AX_PYTHON_MODULE([netaddr], [fatal])
 AX_PYTHON_MODULE([pthreading], [fatal])
 AX_PYTHON_MODULE([pyinotify], [fatal])
