--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,2 +1,10 @@
 dist_glusternagiosplugins_PYTHON = \
+	check_disk_and_inode.py \
+	check_remote_host.py \
+	gluster_host_service_handler.py \
+	sadf.py \
+	$(NULL)
+
+EXTRA_DIST = \
+	__init__.py \
 	$(NULL)
