--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,3 +1,8 @@
+cronddir = $(sysconfdir)/cron.d
+crond_DATA = \
+	gluster-sysstat.crontab \
+	$(NULL)
+
 dist_glusternagiosplugins_PYTHON = \
 	check_disk_and_inode.py \
 	check_remote_host.py \
@@ -6,5 +11,6 @@ dist_glusternagiosplugins_PYTHON = \
 	$(NULL)
 
 EXTRA_DIST = \
+	$(crond_DATA) \
 	__init__.py \
 	$(NULL)
