plugins:Fix to handle sadf not accepting time range, test case addition
This patch handles the issue of sadf not accepting time range
when used with -x (xml output) option(seen in version 9.0.4).
Added unit-test for memory, cpu, swap, network plugins and
refactored them.

Change-Id: Ie7c2ecfbb38060f236a6faed606bce0aedd27d7a
Signed-off-by: ndarshan <dnarayan@redhat.com>
Reviewed-on: https://cuckoo.blr.redhat.com:8443/14
Reviewed-by: Bala FA <barumuga@redhat.com>
Tested-by: Bala FA <barumuga@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -19,10 +19,20 @@
 #
 
 test_modules = \
+	test_cpu.py \
+	test_cpu_dataFile.py \
+	test_memory.py \
+	test_memory_dataFile.py \
+	test_network.py \
+	test_network_dataFile.py \
 	test_sadf.py \
+	test_swap.py \
+	test_swap_dataFile.py \
 	$(NULL)
 
 dist_glusternagiosaddonstests_DATA = \
+	getLatestStat_exception.xml \
+	getLatestStat_success.xml \
 	$(NULL)
 
 dist_glusternagiosaddonstests_PYTHON = \
