--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -119,10 +119,10 @@ rm -rf %{buildroot}
 cat >> %{_sysconfdir}/nagios/nrpe.cfg <<EOF
 ### gluster nrpe plugins ###
 command[check_disk_and_inode]=%{_libdir}/nagios/plugins/gluster/check_disk_and_inode.py -w 80 -c 90 -l -i /boot -i /var -i /root -n
-command[check_memory]=%{_libdir}/nagios/plugins/gluster/sadf.py -m -w 80 -c 90
-command[check_swap_usage]=%{_libdir}/nagios/plugins/gluster/sadf.py -s -w 80 -c 90
-command[check_cpu_multicore]=%{_libdir}/nagios/plugins/gluster/sadf.py -cp -w 80 -c 90
-command[check_interfaces]=%{_libdir}/nagios/plugins/gluster/sadf.py -n -e lo
+command[check_memory]=%{_libdir}/nagios/plugins/gluster/memory.py -w 80 -c 90
+command[check_swap_usage]=%{_libdir}/nagios/plugins/gluster/swap.py -w 80 -c 90
+command[check_cpu_multicore]=%{_libdir}/nagios/plugins/gluster/cpu.py -w 80 -c 90
+command[check_interfaces]=%{_libdir}/nagios/plugins/gluster/network.py -e lo -e ;vdsmdummy;
 EOF
 %_init_enable nrpe
 %_init_restart crond
@@ -138,7 +138,7 @@ sed -i '/check_cpu_multicore.py/d' %{_sysconfdir}/nagios/nrpe.cfg
 
 %files
 %defattr(-,root,root,-)
-%{_libdir}/nagios/plugins/gluster/*
+%attr(0755, -, -) %{_libdir}/nagios/plugins/gluster/*
 %{_sysconfdir}/cron.d/gluster-sysstat.crontab
 
 %files tests
