plugins: Added the files for volume utilization and status plugins fixed few issues with code
fixed the pep8 issues

Change-Id: I2c2b32e7bbdc30a7b68acc1ce4e0468fd53a3050
Signed-off-by: Nishanth Thomas <nthomas@redhat.com>
Reviewed-on: https://cuckoo.blr.redhat.com:8443/42
Reviewed-by: Sahina Bose <sabose@redhat.com>
Tested-by: Sahina Bose <sabose@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -88,11 +88,14 @@ AX_PYTHON_MODULE([pthreading], [fatal])
 AX_PYTHON_MODULE([pyinotify], [fatal])
 AX_PYTHON_MODULE([selinux], [fatal])
 
+#PKG_CHECK_MODULES("libgfapi", libgfapi >= 3.4.0)
+
 # Keep sorted
 AC_CONFIG_FILES([
 	Makefile
 	gluster-nagios-addons.spec
 	plugins/Makefile
+	plugins/volcap/Makefile
 	tests/Makefile
 	tests/run_tests_local.sh
 	tests/run_tests.sh
