--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -122,7 +122,7 @@ command[check_disk_and_inode]=%{_libdir}/nagios/plugins/gluster/check_disk_and_i
 command[check_memory]=%{_libdir}/nagios/plugins/gluster/memory.py -w 80 -c 90
 command[check_swap_usage]=%{_libdir}/nagios/plugins/gluster/swap.py -w 80 -c 90
 command[check_cpu_multicore]=%{_libdir}/nagios/plugins/gluster/cpu.py -w 80 -c 90
-command[check_interfaces]=%{_libdir}/nagios/plugins/gluster/network.py -e lo -e ;vdsmdummy;
+command[check_interfaces]=%{_libdir}/nagios/plugins/gluster/network.py -e lo -e ';vdsmdummy;'
 EOF
 %_init_enable nrpe
 %_init_restart crond
