fix: fix for build issue with respect to capacity.so
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>
Change-Id: Ic680cee909eb41358f524256b9036790370cb53b
Reviewed-on: https://cuckoo.blr.redhat.com:8443/55
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/plugins/volcap/Makefile.am
+++ b/plugins/volcap/Makefile.am
@@ -1,12 +1,12 @@
 
 dist_glusternagiosplugins_PYTHON = \
-	volcap.so \
+	capacity.so \
 	$(NULL)
 
-volcap.so: volCap.c setup.py
+capacity.so: volCap.c setup.py
 	(cd $(srcdir); $(PYTHON) setup.py build \
 		--build-temp $(abs_builddir) --build-lib $(abs_builddir))
-all-local: volcap.so
+all-local: capacity.so
 
 EXTRA_DIST = \
 	$(NULL)
@@ -19,4 +19,4 @@ EXTRA_DIST = \
 
 CLEANFILES = \
 	volcap.o \
-	volcap.so
+	capacity.so
