Add python-cpopen requires dependency in the spec file.
Change-Id: I41d4f611c9e2cde12eae802476684c13b82f5c3f
Signed-off-by: Timothy Asir <tim.gluster@gmail.com>
Reviewed-on: https://cuckoo.blr.redhat.com:8443/60
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -70,6 +70,7 @@ Requires:         python-ethtool
 Requires:         python-inotify
 Requires:         python-netaddr
 Requires:         python-pthreading
+Requires:         python-cpopen
 Requires:         sysstat
 
 %description
