rhs-nagios-addon: Added nagios-plugins-ide_smart dependency
Added the nagios-plugins-ide_smart dependency to be installed

Change-Id: I7fa05fcac6a769a9cdc253f3fe55b2b4f8e72fd5
Signed-off-by: Shubhendu Tripathi <shtripat@redhat.com>
Reviewed-on: https://code.engineering.redhat.com/gerrit/21956
Reviewed-by: Timothy Asir Jeyasingh <tjeyasin@redhat.com>
Reviewed-by: Darshan Narayana Murthy <dnarayan@redhat.com>
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -64,6 +64,7 @@ Requires(post):   iptables
 %endif
 Requires:         gluster-nagios-common
 Requires:         libselinux-python
+Requires:         nagios-plugins-ide_smart
 Requires:         nrpe
 Requires:         python-argparse
 Requires:         python-ethtool
