--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -9,6 +9,7 @@ crond_DATA = \
 
 dist_glusternagiosplugins_PYTHON = \
 	check_disk_and_inode.py \
+	check_gluster_syslog.py \
 	check_vol_utilization.py \
 	check_vol_status.py \
 	check_volume_status.py \
@@ -19,6 +20,7 @@ dist_glusternagiosplugins_PYTHON = \
 	__init__.py \
 	memory.py \
 	network.py \
+	nscautils.py \
 	sadf.py \
 	swap.py \
 	$(NULL)
