--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -5,6 +5,7 @@ SUBDIRS = \
 cronddir = $(sysconfdir)/cron.d
 crond_DATA = \
 	gluster-sysstat.crontab \
+	gluster-proc.crontab \
 	$(NULL)
 
 dist_glusternagiosplugins_PYTHON = \
@@ -13,6 +14,7 @@ dist_glusternagiosplugins_PYTHON = \
 	check_vol_utilization.py \
 	check_vol_status.py \
 	check_volume_status.py \
+	check_proc_status.py \
 	cpu.py \
 	discoverpeers.py \
 	discoverlogicalcomponents.py \
