--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -11,6 +11,7 @@ dist_glusternagiosplugins_PYTHON = \
 	check_disk_and_inode.py \
 	check_vol_utilization.py \
 	check_vol_status.py \
+	check_volume_status.py \
 	cpu.py \
 	discoverpeers.py \
 	discoverlogicalcomponents.py \
