autoconf: use host name for host config - node side
 adding the NRPE command 'discoverhostparams' to find the
host name to use it host configuration.

Change-Id: Ic80ac487059566f62afad83a5880922f8b5eb4cd
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -139,6 +139,7 @@ command[check_vol_quota_status]=sudo /usr/lib64/nagios/plugins/gluster/check_vol
 ###Auto Discovery related
 command[discoverpeers]=%{_libdir}/nagios/plugins/gluster/discoverpeers.py
 command[discoverlogicalcomponents]=sudo %{_libdir}/nagios/plugins/gluster/discoverlogicalcomponents.py
+command[discoverhostparams]=%{_libdir}/nagios/plugins/gluster/discoverhostparams.py
 EOF
 %_init_enable nrpe
 %_init_restart crond
