spec: python-cpopen >= 1.3
Updated the spec file with required python-cpopen version.

Change-Id: I156ecf072297538186f0d4c5851f24d9ea90ba88
Signed-off-by: Kanagaraj M <kmayilsa@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -71,7 +71,7 @@ Requires:         python-ethtool
 Requires:         python-inotify
 Requires:         python-netaddr
 Requires:         python-pthreading
-Requires:         python-cpopen
+Requires:         python-cpopen >= 1.3
 Requires:         sysstat
 
 %description
