autoconf: use glustercli to run volume info command
  Using the glustercli.volumeInfo() from common to get the volume
info. It makes the discovery logic very simple

Change-Id: Iacf319eb3b3b39805a483cbe43b02496802316a7
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -135,8 +135,8 @@ command[check_vol_utilization]=sudo /usr/lib64/nagios/plugins/gluster/check_vol_
 command[check_vol_status]=sudo /usr/lib64/nagios/plugins/gluster/check_volume_status.py -v \$ARG1\$ -t info
 command[check_vol_quota_status]=sudo /usr/lib64/nagios/plugins/gluster/check_volume_status.py -v \$ARG1\$ -t quota
 ###Auto Discovery related
-command[discoverpeers]=/usr/lib64/nagios/plugins/gluster/discoverpeers.py
-command[discoverlogicalcomponents]=/usr/lib64/nagios/plugins/gluster/discoverlogicalcomponents.py
+command[discoverpeers]=%{_libdir}/nagios/plugins/gluster/discoverpeers.py
+command[discoverlogicalcomponents]=sudo %{_libdir}/nagios/plugins/gluster/discoverlogicalcomponents.py
 EOF
 %_init_enable nrpe
 %_init_restart crond
