plugins: Fixed errors in syslog plugin
Added a requires on nsca and fixed the errors
on calling syslog plugin

Change-Id: I310a6a8aa64042a290d45207f78cf1d1d2b3b09b
Signed-off-by: Sahina Bose <sabose@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -50,7 +50,7 @@ AC_SUBST([NAGIOSGROUP], [nagios])
 
 # default paths
 AC_SUBST([nagiospluginsdir], ['${libdir}/nagios/plugins'])
-AC_SUBST([glusternagiospluginsdir], ['${nagiospluginsdir}/gluster'])
+AC_SUBST([glusternagiospluginsdir], ['/usr/lib64/nagios/plugins/gluster'])
 AC_SUBST([glusternagioscommonpylibdir], ['${pyexecdir}/glusternagios'])
 AC_SUBST([glusternagiosaddonstestsdir], ['${datarootdir}/${PACKAGE_NAME}/tests'])
 AC_SUBST([nagiosconf], ['/etc/nagios'])
