Use hostname from the config for sending proc status thru nsca
fetch the hostname from nagios_server.conf file
otherwise use the host-fqdn name for sending proc status
thru nsca. And fix the check_proc_status plugin path
in cron.d/gluster-proc.crontab file.

Change-Id: Ibfc027742b58d87daa7e54aa553892d42c71e795
Signed-off-by: Timothy Asir <tjeyasin@redhat.com>

--- a/config/nagios_server.conf
+++ b/config/nagios_server.conf
@@ -11,3 +11,9 @@ nagios_server=
 [NAGIOS-DEFINTIONS]
 cluster_name=
 
+
+# LOCAL HOST NAME
+# Host name given in the nagios server
+[HOST-NAME]
+hostname_in_nagios=
+
