autoconf: adding sudo in nrpe commands
Adding sudo in nrpe commands to use clustercli.

Change-Id: I3ad29d942def0969489c2ff7c17065546b0a1427
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -138,9 +138,9 @@ command[check_vol_status]=sudo %{_libdir}/nagios/plugins/gluster/check_volume_st
 command[check_vol_quota_status]=sudo %{_libdir}/nagios/plugins/gluster/check_volume_status.py -v \$ARG1\$ -t quota
 command[check_vol_heal_status]=sudo %{_libdir}/nagios/plugins/gluster/check_volume_status.py -v \$ARG1\$ -t self-heal
 ###Auto Discovery related
-command[discoverpeers]=%{_libdir}/nagios/plugins/gluster/discoverpeers.py
+command[discoverpeers]=sudo %{_libdir}/nagios/plugins/gluster/discoverpeers.py
 command[discoverlogicalcomponents]=sudo %{_libdir}/nagios/plugins/gluster/discoverlogicalcomponents.py
-command[discoverhostparams]=%{_libdir}/nagios/plugins/gluster/discoverhostparams.py
+command[discoverhostparams]=sudo %{_libdir}/nagios/plugins/gluster/discoverhostparams.py
 EOF
 %_init_enable nrpe
 %_init_restart crond
