--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -45,8 +45,15 @@ BuildRoot:        %{_tmppath}/%{name}-%{version}-root
 BuildRequires:    pyflakes
 BuildRequires:    python-pep8
 BuildRequires:    python-mock
+BuildRequires:    python-cpopen
+BuildRequires:    python-ethtool
+BuildRequires:    python-inotify
+BuildRequires:    python-netaddr
+BuildRequires:    python-argparse
 BuildRequires:    python-nose
 BuildRequires:    python-devel
+BuildRequires:    libselinux-python
+BuildRequires:    gluster-nagios-common
 %if ( 0%{?_with_systemd:1} )
 BuildRequires:    systemd-units
 Requires(post):   systemd-units
