autoconf: Add NRPE command to configure NSCA
  Adding a new NRPE command 'configure_gluster_node' to configure
gluster nodes to send passive check results using NSCA.

Change-Id: I1993eefab112f9fb5ba7764593cebca9923b4aba
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>
Reviewed-on: http://review.gluster.org/7595
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -19,6 +19,7 @@ dist_glusternagiosplugins_PYTHON = \
 	discoverpeers.py \
 	discoverlogicalcomponents.py \
 	discoverhostparams.py \
+	configure_gluster_node.py \
 	__init__.py \
 	memory.py \
 	network.py \
