--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -148,6 +148,7 @@ command[check_vol_heal_status]=sudo %{_libdir}/nagios/plugins/gluster/check_volu
 command[discoverpeers]=sudo %{_libdir}/nagios/plugins/gluster/discoverpeers.py
 command[discoverlogicalcomponents]=sudo %{_libdir}/nagios/plugins/gluster/discoverlogicalcomponents.py
 command[discoverhostparams]=sudo %{_libdir}/nagios/plugins/gluster/discoverhostparams.py
+command[configure_gluster_node]=sudo %{_libdir}/nagios/plugins/gluster/configure_gluster_node.py -c \$ARG1\$ -n \$ARG2\$ -H \$ARG3\$
 EOF
 %_init_enable nrpe
 %_init_restart crond
