Run check gluster process status as a daemon
Enhanced to send specific gluster related process status only
when there is a change detected in a service status or for any
critical status to avoid too many logs in the nagios service side.

Change-Id: I26e389ae2d1ccba1b5ccadc45d202d3b5219c74a
Signed-off-by: Timothy Asir <tjeyasin@redhat.com>
Reviewed-on: http://review.gluster.org/7602
Reviewed-by: Sahina Bose <sabose@redhat.com>
Tested-by: Timothy Asir <tim.gluster@gmail.com>

--- a/config/nagios_server.conf
+++ b/config/nagios_server.conf
@@ -17,3 +17,8 @@ cluster_name=
 [HOST-NAME]
 hostname_in_nagios=
 
+
+# LOCAL HOST CONFIGURATION
+# Process monitoring sleeping intevel
+[HOST-CONF]
+proc-mon-sleep-time=60
