--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -82,6 +82,8 @@ Requires:         python-netaddr
 Requires:         python-pthreading
 Requires:         python-cpopen >= 1.3
 Requires:         python-psutil
+Requires:         python-lockfile
+Requires:         python-daemon
 Requires:         sysstat
 
 %description
@@ -150,11 +152,14 @@ command[discoverhostparams]=sudo %{_libdir}/nagios/plugins/gluster/discoverhostp
 command[configure_gluster_node]=sudo %{_libdir}/nagios/plugins/gluster/configure_gluster_node.py -c \$ARG1\$ -n \$ARG2\$ -H \$ARG3\$
 EOF
 %_init_enable nrpe
+%_init_enable glusterpmd
 %_init_restart crond
 %_init_restart rsyslog
-
+%_init_restart glusterpmd
 
 %preun
+%_init_disable glusterpmd
+%_init_stop glusterpmd
 sed -i '/gluster nrpe plugins/d' %{_sysconfdir}/nagios/nrpe.cfg
 sed -i '/check_disk_and_inode/d' %{_sysconfdir}/nagios/nrpe.cfg
 sed -i '/check_memory/d' %{_sysconfdir}/nagios/nrpe.cfg
@@ -167,10 +172,11 @@ sed -i '/check_vol_quota_status/d' %{_sysconfdir}/nagios/nrpe.cfg
 %files
 %defattr(-,root,root,-)
 %attr(0755, -, -) %{_libdir}/nagios/plugins/gluster/*
+%attr(0755, -, -) %{_sysconfdir}/init.d/glusterpmd
 %{_sysconfdir}/cron.d/gluster-sysstat.crontab
 %{_sysconfdir}/rsyslog.d/glusternagios.conf
 %{_sysconfdir}/nagios/nagios_server.conf
-%{_sysconfdir}/cron.d/gluster-proc.crontab
+%{_sysconfdir}/init.d/glusterpmd
 
 %files tests
 %defattr(-,root,root,-)
