--- a/plugins/nscautils.py.in
+++ b/plugins/nscautils.py.in
@@ -17,6 +17,7 @@
 #
 
 import ConfigParser
+import subprocess
 
 from glusternagios import utils
 
@@ -59,6 +60,29 @@ def send_to_nsca(hostName, serviceName, exitStatus, resultString):
                          '-c', __NSCA_CONF_PATH]
     ret, out, err = utils.execCmd(command_send_nsca, data=cmddata)
     return ret
+
+
+def send_to_nsca_subproc(hostName, serviceName, exitStatus, resultString):
+    cmddata = '%s\t%s\t%s\t%s\n' % (hostName,
+                                    serviceName,
+                                    exitStatus,
+                                    resultString)
+    nagiosIP = getNagiosServerIP()
+    p = subprocess.Popen(
+            args=(
+                  __NSCA_CMD_PATH.cmd,
+                  '-c',  __NSCA_CONF_PATH,
+                  '-H', nagiosIP,
+            ),
+            stdin=subprocess.PIPE,
+            stdout=subprocess.PIPE,
+            stderr=subprocess.PIPE,
+            close_fds=True,
+        )
+
+    stdout, stderr = p.communicate(input=cmddata)
+    rc = p.returncode
+    return rc
 
 
 def vol_service_name(volName, statusType=None):
