plugins: Plugin to handle server quorum
Plugin to handle log messages related to server
quorum
Message is parsed for msgid as the msgid is not
correctly populated now

Fixed pep8 errors in nscautils and added tests

Also changed the service name to remove "Status"
-it now reads Volume Quota, for instance

Change-Id: I339ed16b3806f853ae3555a998974c47157c95ad
Signed-off-by: Sahina Bose <sabose@redhat.com>
Reviewed-on: http://review.gluster.org/7648
Reviewed-by: Shubhendu Tripathi <shtripat@redhat.com>
Reviewed-by: Ramesh N <rnachimu@redhat.com>
Reviewed-by: Kanagaraj M <kmayilsa@redhat.com>

--- a/plugins/nscautils.py.in
+++ b/plugins/nscautils.py.in
@@ -69,15 +69,15 @@ def send_to_nsca_subproc(hostName, serviceName, exitStatus, resultString):
                                     resultString)
     nagiosIP = getNagiosServerIP()
     p = subprocess.Popen(
-            args=(
-                  __NSCA_CMD_PATH.cmd,
-                  '-c',  __NSCA_CONF_PATH,
-                  '-H', nagiosIP,
-            ),
-            stdin=subprocess.PIPE,
-            stdout=subprocess.PIPE,
-            stderr=subprocess.PIPE,
-            close_fds=True,
+        args=(
+            __NSCA_CMD_PATH.cmd,
+            '-c',  __NSCA_CONF_PATH,
+            '-H', nagiosIP,
+        ),
+        stdin=subprocess.PIPE,
+        stdout=subprocess.PIPE,
+        stderr=subprocess.PIPE,
+        close_fds=True,
         )
 
     stdout, stderr = p.communicate(input=cmddata)
@@ -86,4 +86,4 @@ def send_to_nsca_subproc(hostName, serviceName, exitStatus, resultString):
 
 
 def vol_service_name(volName, statusType=None):
-    return "Volume Status %s - %s" % (statusType, volName)
+    return "Volume %s - %s" % (statusType, volName)
